--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,19 @@
 *.rst	eol=lf
 *.md	eol=lf
 *.mdx   eol=lf
+
+# 拡張子が .py のファイルは、LF（Line Feed）を改行コードとして使用します。Pythonの標準として、LFが推奨されています。
+# 拡張子が .rst のファイル（reStructuredText形式のファイル）もLFを改行コードとして使用します。
+# 拡張子が .md のファイル（Markdown形式のファイル）についても、LFを改行コードとして指定しています。
+# 拡張子が .mdx のファイル（MDX形式のファイル）でもLFを改行コードとして使用します。
+
+# EOL（End Of Line）について
+#  LF（Line Feed）: UNIX系システム（LinuxやmacOS）で使用される改行コードです。\n と表現されます。
+#  CRLF（Carriage Return + Line Feed）: Windowsシステムで使用される改行コードです。\r\n と表現されます。
+
+# 利点
+#  プラットフォーム間の一貫性: これらの設定により、異なるプラットフォームで作業する際に、ファイルの改行コードが統一されるため、バージョン管理システムでの差分が減り、コラボレーションが容易になります。
+#  エディタの互換性: エディタによって改行コードが異なると、ファイルが正しく表示されないことがあります。この設定により、特定の改行コードを強制することができます。
+
+# まとめ
+#  このような設定を行うことで、特定の拡張子を持つファイルに対して、改行コードを統一し、チームメンバーや異なる環境での作業がスムーズになることが期待されます。
